--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
@@ -184,7 +184,7 @@
  policy_pd_gaia_modifier_desc: "我们可以将高等环境改造技术用在每一项星球工程中，尽管这花费不菲。这将确保每一个经历改造的星球都被塑造为完美的姿态。"
  pd_expensive_gaia_terraforming_name: "星球塑形师改造"
  pd_expensive_gaia_terraforming: "星球塑形师改造"
- pd_expensive_gaia_terraforming_desc: "所有环境改造项目都将获得§Y$engineered_environment_gaia$修正§!，并因此变得更为昂贵。"
+ pd_expensive_gaia_terraforming_desc: "所有环境改造项目都会获得§Y$engineered_environment_gaia$修正§!。这会使它们变得更为昂贵。"
  pd_normal_terraforming_name: "常规环境改造标准"
  pd_normal_terraforming: "常规环境改造标准"
- pd_normal_terraforming_desc: "环境改造花费会保持常规水平。选中的星球才会被应用星球塑形师技术。"
+ pd_normal_terraforming_desc: "环境改造花费将保持常规水平。我们会挑选星球来应用星球塑形师技术。"
