--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
@@ -47,7 +47,7 @@
  mod_pc_pd_megaflora_habitability: "陆地星球宜居性"
  trait_pc_pd_megaflora_preference: "陆地星球偏好"
  trait_pc_pd_megaflora_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_mushroom: "蕈菌大陆星球"
+ pc_pd_mushroom: "蕈菌星球（陆地）"
  pc_pd_mushroom_desc: "潮汐锁定的岩质星球，拥有氮氧大气。蕈菌繁茂，水圈强力而健康。这颗星球乃是巨型蕈菌的家园。"
  pc_pd_mushroom_adj: "蕈菌"
  mod_pc_pd_mushroom_habitability: "陆地星球宜居性"
@@ -59,7 +59,7 @@
  mod_pc_pd_cascadian_habitability: "海洋星球宜居性"
  trait_pc_pd_cascadian_preference: "海洋星球偏好"
  trait_pc_pd_cascadian_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_swamp: "湿地星球"
+ pc_pd_swamp: "沼泽星球（树沼）"
  pc_pd_swamp_desc: "湿润多雨的星球，拥有氮氧大气。星球上大部分地区都覆盖着林木茂盛的湿地，地表极少有没有没入水面下的地方。水圈强大而稳定，主要由浅海、湿地和沼泽构成，养育着丰富的动植物生命。"
  pc_pd_swamp_adj: "沼泽"
  mod_pc_pd_swamp_habitability: "海洋星球宜居性"
@@ -89,12 +89,6 @@
  mod_pc_pd_algae_habitability: "海洋星球宜居性"
  trait_pc_pd_algae_preference: "海洋星球偏好"
  trait_pc_pd_algae_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_columnar: "Columnar World"
- pc_pd_columnar_desc: "A rocky world with a nitrogen-oxygen atmosphere and extensive hydrosphere. The surface is covered in oceans and interspersed with landmasses formed by columnar basalt structures resulting from eons of significant volcanic activity."
- pc_pd_columnar_adj: "columned"
- mod_pc_pd_columnar_habitability: "Ocean Habitability"
- trait_pc_pd_columnar_preference: "Ocean Preference"
- trait_pc_pd_columnar_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_reef: "珊瑚礁星球"
  pc_pd_reef_desc: "气候温和的岩石星球，拥有氮氧大气层与巨大的水圈。99%以上地表都是浅海，在行星轨道上可以直接看到隐藏在水面下的规模巨大的礁脉体系。有些地方的礁脉生长到高出水面，形成星罗棋布的礁脉链，成为仅有的露出海面的陆地。"
  pc_pd_reef_adj: "珊瑚礁"
@@ -113,7 +107,7 @@
  mod_pc_pd_atoll_habitability: "热带星球宜居性"
  trait_pc_pd_atoll_preference: "热带星球偏好"
  trait_pc_pd_atoll_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_tepui: "莽丛台地星球"
+ pc_pd_tepui: "台地星球（热带）"
  pc_pd_tepui_desc: "拥有氮氧大气层的岩石星球，山地遍布，草木葱郁。该星球拥有规模巨大的水圈，地表存在非常繁盛的植物群落，高低海拔环境迥异。在峻峭的台地高原上，气温较为凉爽，降雨丰沛；地势较低的地方则更加温暖、潮湿，发育出繁茂的丛林。"
  pc_pd_tepui_adj: "山地"
  mod_pc_pd_tepui_habitability: "热带星球宜居性"
@@ -131,7 +125,7 @@
  mod_pc_pd_cenote_habitability: "热带星球宜居性"
  trait_pc_pd_cenote_preference: "热带星球偏好"
  trait_pc_pd_cenote_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_fungal: "蕈菌丛林星球"
+ pc_pd_fungal: "蕈菌星球（热带）"
  pc_pd_fungal_desc: "一类拥有致密氮氧大气的湿润岩石星球，有着明显的雨季。蕈基植被占据了陆地，生命繁茂。"
  pc_pd_fungal_adj: "蕈菌"
  mod_pc_pd_fungal_habitability: "热带星球宜居性"
@@ -185,7 +179,7 @@
  mod_pc_pd_coastal_habitability: "沙漠星球宜居性"
  trait_pc_pd_coastal_preference: "沙漠星球偏好"
  trait_pc_pd_coastal_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_fungi: "蕈菌沙漠星球"
+ pc_pd_fungi: "蕈菌星球（沙漠）"
  pc_pd_fungi_desc: "拥有氮氧大气的岩石星球。火山灰覆盖的地表环境滋养了大群的沙漠菌丛。大多数地区都不适宜动植物生活于此。"
  pc_pd_fungi_adj: "蕈菌"
  mod_pc_pd_fungi_habitability: "沙漠星球宜居性"
@@ -203,7 +197,7 @@
  mod_pc_pd_aquifer_habitability: "沙漠星球宜居性"
  trait_pc_pd_aquifer_preference: "沙漠星球偏好"
  trait_pc_pd_aquifer_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_mesa: "干燥台地星球"
+ pc_pd_mesa: "台地星球（干旱）"
  pc_pd_mesa_desc: "炎热、干燥的岩石星球，拥有氮氧大气层。巨大的高原和平顶山地貌在赤道地区随处可见，而极地地区则森林密布，更为凉爽。主要的水体是那些被刀削般的峭壁拱卫，河床上植物繁茂的大河。"
  pc_pd_mesa_adj: "干旱"
  mod_pc_pd_mesa_habitability: "干旱星球宜居性"
@@ -330,7 +324,7 @@
  trait_pc_pd_antarctic_preference: "极地星球偏好"
  trait_pc_pd_antarctic_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_aeolian: "风蚀星球"
- pc_pd_aeolian_desc: "冷冽的岩石世界，大气层中富含氮氧元素。通常风速可达3km/h以上。狂风塑造出空蚀的天坑，扁窄的峡谷，以及凹陷的洼地；这些地形让生命可以在其中蓬勃发育，而不会遭受恶劣气候的侵扰。"
+ pc_pd_aeolian_desc: "冷冽的岩石世界，大气层中富含氮氧元素。通常风速可达300km/h以上。狂风塑造出空蚀的天坑，扁窄的峡谷，以及凹陷的洼地；这些地形让生命可以在其中蓬勃发育，而不会遭受恶劣气候的侵扰。"
  pc_pd_aeolian_adj: "强风"
  mod_pc_pd_aeolian_habitability: "极地星球宜居性"
  trait_pc_pd_aeolian_preference: "极地星球偏好"
@@ -413,13 +407,13 @@
  mod_pc_pd_lanthanide_habitability: "高山星球宜居性"
  trait_pc_pd_lanthanide_preference: "高山星球偏好"
  trait_pc_pd_lanthanide_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_bog: "沼泽星球"
+ pc_pd_bog: "沼泽星球（酸沼）"
  pc_pd_bog_desc: "拥有厚重氮氧大气层的星球，环境又冷又泥泞。此地的夏季湿润而短暂，冬季寒冷而漫长，全年的降水量相当可观。陆地上是一片湿漉漉的环境，泥水中浸泡着顽强而又繁茂的草木。"
  pc_pd_bog_adj: "沼泽"
  mod_pc_pd_bog_habitability: "苔原星球宜居性"
  trait_pc_pd_bog_preference: "苔原星球偏好"
  trait_pc_pd_bog_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_mycelium: "蕈菌冻原星球"
+ pc_pd_mycelium: "蕈菌星球（苔原）"
  pc_pd_mycelium_desc: "拥有氮氧大气层的寒冷岩石星球。除了凉爽而短暂的夏季之外，一年中的其他时候都处于又干又冷的冬季。在中纬度地区，随处可见高大的蕈菌形成广袤的丛林，还有蔓延各地的，庞大又密集的地下菌丝网。"
  pc_pd_mycelium_adj: "寒冷"
  mod_pc_pd_mycelium_habitability: "苔原星球宜居性"
@@ -586,32 +580,32 @@
  pd_tooltip_consumer_goods: "£job_artisan£ $job_artisan_plural$产出£consumer_goods£ §Y$consumer_goods$§!"
  pd_tooltip_alloys: "£job_foundry£ $job_foundry_plural$产出£alloys£ §Y$alloys$§!"
  pd_tooltip_culture: "提供更多£mod_job_culture_worker_add£ §Y$job_culture_worker_plural$§!岗位"
- pd_researcher_ending: "§Y研究点数§!（£job_researcher£ $job_researcher_plural$产出）"
+ pd_researcher_ending: "£job_researcher£ $job_researcher_plural$产出§Y研究点数§!"
  rare_building_warning: "可以从三种建筑中选择一种建造："
- pc_pd_megaflora_tooltip: "§Y巨树星球§!是一种['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+2§!\n—£district£ §Y$district_generator_plural$§!：§G+2§!\n—建筑与区划的花费：§R+20%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_energy$\n$t$—£society£ £engineering£ $pd_researcher_ending$"
- pc_pd_petrified_tooltip: "§Y木化石星球§!是一类['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+4§!\n—建筑和区划花费：§R+10%§!\n—住房：§R-10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_consumer_goods$\n$t$—£society£ £engineering£ $pd_researcher_ending$"
- pc_pd_reef_tooltip: "§Y$pc_pd_reef$§!是一类['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+4§!\n—建筑和区划花费：§R+10%§!\n—住房：§R-10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_consumer_goods$\n$t$—£society£ £engineering£ $pd_researcher_ending$"
+ pc_pd_megaflora_tooltip: "§Y巨树星球§!是一种['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+2§!\n—£district£ §Y$district_generator_plural$§!：§G+2§!\n—建筑与区划的花费：§R+20%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_energy$\n$t$—$pd_researcher_ending$（£society£ £engineering£）"
+ pc_pd_petrified_tooltip: "§Y木化石星球§!是一类['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+4§!\n—建筑和区划花费：§R+10%§!\n—住房：§R-10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_consumer_goods$\n$t$—$pd_researcher_ending$（£society£ £engineering£）"
+ pc_pd_reef_tooltip: "§Y$pc_pd_reef$§!是一类['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+4§!\n—建筑和区划花费：§R+10%§!\n—住房：§R-10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_consumer_goods$\n$t$—$pd_researcher_ending$（£society£ £engineering£）"
  pc_pd_archipelago_tooltip: "§Y$pc_pd_archipelago$§!是一类['concept_pd_rares']\n—£district£ §Y$district_farming_plural$§!：§G+4§!\n—建筑和区划花费：§R+10%§!\n—建筑和区划维护费：§R+10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_alloys$\n$t$—$pd_tooltip_food$\n$t$—$pd_tooltip_culture$"
- pc_pd_geothermal_tooltip: "§Y$pc_pd_geothermal$§!是有一种['concept_pd_rares']\n—£district£ §Y$district_generator_plural$§!：§G+4§!\n—建筑和区划花费：§R+10%§!\n—住房：§R-10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_energy$\n$t$—$pd_tooltip_alloys$\n$t$—£engineering£ $pd_researcher_ending$"
- pc_pd_biolumen_tooltip: "§Y$pc_pd_biolumen$§!是一类['concept_pd_rares']\n—£district£ §Y$district_farming_plural$§!：§G+4§!\n—迁入吸引力：§G+25%§!\n—住房：§R-10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_food$\n$t$—£society£ $pd_researcher_ending$\n$t$—$pd_tooltip_culture$"
- pc_pd_salt_tooltip: "§Y$pc_pd_salt$§!是一类['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+6§!\n—£district£ §Y$district_farming_plural$§!：§R-2§!\n—宜居性：§R-20%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_alloys$\n$t$—£engineering£ $pd_researcher_ending$"
- pc_pd_aquifer_tooltip: "§Y$pc_pd_aquifer$§!是一类['concept_pd_rares']\n—£district£ §Y$district_farming_plural$§!：§G+4§!\n—住房：§R-20%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_food$\n$t$—£society£ $pd_researcher_ending$\n$t$—$pd_tooltip_culture$"
- pc_pd_coral_tooltip: "§Y$pc_pd_coral$§!是一类['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+4§!\n—宜居性：§R-10%§!\n—住房：§R-10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_consumer_goods$\n$t$—£society£ £engineering£ $pd_researcher_ending$\n$t$—$pd_tooltip_culture$"
+ pc_pd_geothermal_tooltip: "§Y$pc_pd_geothermal$§!是有一种['concept_pd_rares']\n—£district£ §Y$district_generator_plural$§!：§G+4§!\n—建筑和区划花费：§R+10%§!\n—住房：§R-10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_energy$\n$t$—$pd_tooltip_alloys$\n$t$—$pd_researcher_ending$（£engineering£）"
+ pc_pd_biolumen_tooltip: "§Y$pc_pd_biolumen$§!是一类['concept_pd_rares']\n—£district£ §Y$district_farming_plural$§!：§G+4§!\n—迁入吸引力：§G+25%§!\n—住房：§R-10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_food$\n$t$—$pd_researcher_ending$（£society£）\n$t$—$pd_tooltip_culture$"
+ pc_pd_salt_tooltip: "§Y$pc_pd_salt$§!是一类['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+6§!\n—£district£ §Y$district_farming_plural$§!：§R-2§!\n—宜居性：§R-20%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_alloys$\n$t$—$pd_researcher_ending$（£engineering£）"
+ pc_pd_aquifer_tooltip: "§Y$pc_pd_aquifer$§!是一类['concept_pd_rares']\n—£district£ §Y$district_farming_plural$§!：§G+4§!\n—住房：§R-20%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_food$\n$t$—$pd_researcher_ending$（£society£）\n$t$—$pd_tooltip_culture$"
+ pc_pd_coral_tooltip: "§Y$pc_pd_coral$§!是一类['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+4§!\n—宜居性：§R-10%§!\n—住房：§R-10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_consumer_goods$\n$t$—$pd_researcher_ending$（£society£ £engineering£）\n$t$—$pd_tooltip_culture$"
  pc_pd_primal_tooltip: "§Y$pc_pd_primal$§!是一类['concept_pd_rares']\n—£district£ §Y$district_generator_plural$§!：§G+4§!\n—建筑和区划花费：§R+10%§!\n—建筑和区划维护费：§R+10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_alloys$\n$t$—$pd_tooltip_energy$\n$t$—$pd_tooltip_minerals$"
- pc_pd_supercontinent_tooltip: "§Y$pc_pd_supercontinent$§!是一类['concept_pd_rares']\n—£district£ §Y$district_farming_plural$§!：§G+4§!\n—住房：§R-10%§!\n—建筑和区划维护费：§R+10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_food$\n$t$—$pd_tooltip_energy$\n$t$—£physics£ £engineering£ $pd_researcher_ending$"
- pc_pd_sinkhole_tooltip: "§Y$pc_pd_sinkhole$§!是一类['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+4§!\n—住房：§G+10%§!\n—建筑和区划花费：§R+15%§!\n—建筑和区划维护费：§R+15%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_energy$\n$t$—£physics£ £engineering£ $pd_researcher_ending$"
- pc_pd_storm_tooltip: "§Y$pc_pd_storm$§!是一类['concept_pd_rares']\n—£district£ §Y$district_generator_plural$§!：§G+6§!\n—£district£ §Y$district_farming_plural$§!：§R+2§!\n—建筑和区划花费：§R+10%§!\n—住房：§R-10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_energy$\n$t$—£engineering£ £society£ $pd_researcher_ending$"
- pc_pd_iceberg_tooltip: "§Y$pc_pd_iceberg$§!是一类['concept_pd_rares']\n—£district£ §Y$district_farming_plural$§!：§G+4§!\n—建筑和区划花费：§R+10%§!\n—住房：§R-10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_alloys$\n$t$—$pd_tooltip_food$\n$t$—£society£ £physics£ $pd_researcher_ending$"
+ pc_pd_supercontinent_tooltip: "§Y$pc_pd_supercontinent$§!是一类['concept_pd_rares']\n—£district£ §Y$district_farming_plural$§!：§G+4§!\n—住房：§R-10%§!\n—建筑和区划维护费：§R+10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_food$\n$t$—$pd_tooltip_energy$\n$t$—$pd_researcher_ending$（£engineering£ £physics£）"
+ pc_pd_sinkhole_tooltip: "§Y$pc_pd_sinkhole$§!是一类['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+4§!\n—住房：§G+10%§!\n—建筑和区划花费：§R+15%§!\n—建筑和区划维护费：§R+15%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_energy$\n$t$—$pd_researcher_ending$（£physics£ £engineering£）"
+ pc_pd_storm_tooltip: "§Y$pc_pd_storm$§!是一类['concept_pd_rares']\n—£district£ §Y$district_generator_plural$§!：§G+6§!\n—£district£ §Y$district_farming_plural$§!：§R+2§!\n—建筑和区划花费：§R+10%§!\n—住房：§R-10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_energy$\n$t$—$pd_researcher_ending$（£engineering£ £society£）"
+ pc_pd_iceberg_tooltip: "§Y$pc_pd_iceberg$§!是一类['concept_pd_rares']\n—£district£ §Y$district_farming_plural$§!：§G+4§!\n—建筑和区划花费：§R+10%§!\n—住房：§R-10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_alloys$\n$t$—$pd_tooltip_food$\n$t$—$pd_researcher_ending$（£physics£ £society£）"
  pc_pd_glaciovolcanic_tooltip: "§Y$pc_pd_glaciovolcanic$§!是一类['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+2§!\n—£district£ §Y$district_generator_plural$§!：§G+2§!\n—宜居性：§R-10%§!\n—住房：§R-10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_alloys$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_culture$"
- pc_pd_lanthanide_tooltip: "§Y$pc_pd_lanthanide$§!是一类['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+4§!\n—建筑和区划花费：§R+10%§!\n—建筑和区划维护费：§R+10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_consumer_goods$\n$t$—£physics£ £engineering£ $pd_researcher_ending$"
- pc_pd_cryoflora_tooltip: "§Y$pc_pd_cryoflora$§!是一类['concept_pd_rares']\n—£district£ §Y$district_generator_plural$§!：§G+4§!\n—宜居性：§R-20%§!\n—幸福度：§G+10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_consumer_goods$\n$t$—£physics£ £society£ $pd_researcher_ending$\n$t$—$pd_tooltip_culture$"
- pc_pd_lichen_tooltip: "§Y$pc_pd_lichen$§!是一类['concept_pd_rares']\n—£district£ §Y$district_farming_plural$§!：§G+6§!\n—£district£ §Y$district_mining_plural$§!：§R-2§!\n—宜居性：§G+10%§!\n—建筑和区划维护费：§R+20%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_food$\n$t$—$pd_tooltip_energy$\n$t$—£society£ $pd_researcher_ending$"
+ pc_pd_lanthanide_tooltip: "§Y$pc_pd_lanthanide$§!是一类['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+4§!\n—建筑和区划花费：§R+10%§!\n—建筑和区划维护费：§R+10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_consumer_goods$\n$t$—$pd_researcher_ending$（£engineering£ £physics£）"
+ pc_pd_cryoflora_tooltip: "§Y$pc_pd_cryoflora$§!是一类['concept_pd_rares']\n—£district£ §Y$district_generator_plural$§!：§G+4§!\n—宜居性：§R-20%§!\n—幸福度：§G+10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_consumer_goods$\n$t$—$pd_researcher_ending$（£society£ £physics£）\n$t$—$pd_tooltip_culture$"
+ pc_pd_lichen_tooltip: "§Y$pc_pd_lichen$§!是一类['concept_pd_rares']\n—£district£ §Y$district_farming_plural$§!：§G+6§!\n—£district£ §Y$district_mining_plural$§!：§R-2§!\n—宜居性：§G+10%§!\n—建筑和区划维护费：§R+20%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_food$\n$t$—$pd_tooltip_energy$\n$t$—$pd_researcher_ending$（£society£）"
  concept_pd_uncommon: "罕有星球"
  concept_pd_uncommons: "罕有星球"
  concept_pd_uncommons_desc: "—宜居性较常规星球更低\n—生成概率很低\n—有对应的特殊改造候选星球\n—有特殊星球修正\n—有会随科技而升级的建筑\n—确保宜居星球会变为改造候选星球"
- pc_pd_superhabitable_tooltip: "§Y超级类地星球§!是一类['concept_pd_uncommons']\n—星球规模介于§G31-35§!之间\n—会提供对应其他§Y超级类地星球§!的宜居性增益\n—只能§Y改造§!为其他类型的§Y超级类地星球§!\n—£district£ §Y$district_farming_plural$§!：§G+4§!\n—人口增长速度：§G+10%§!\n—建筑和区划花费：§R+25%§!\n—宜居性：§R-20%§!\n—$rare_building_warning$\n$t$—£society£ $pd_researcher_ending$\n$t$—$pd_tooltip_food$\n$t$—$pd_tooltip_alloys$"
- pc_pd_tidally_locked_tooltip: "§Y超级锁定星球§!是一类['concept_pd_uncommons']\n—会提供对应其他§Y潮汐锁定星球§!的宜居性增益\n—只能§Y改造§!为其他类型的§Y潮汐锁定星球§!\n—£district£ §Y$district_generator_plural$§!：§G+4§!\n—最大区划数：§R-30%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_energy$\n$t$—$pd_tooltip_food$\n$t$—£physics£ £society£ $pd_researcher_ending$"
- pc_pd_cave_tooltip: "§Y岩洞星球§!是一类['concept_pd_uncommons']\n—会提供对应其他§Y岩洞星球§!的宜居性增益\n—只能§Y改造§!为其他类型的§Y岩洞星球§!\n—£district£ §Y$district_mining_plural$§!：§G+4§!\n—轨道轰炸伤害：§G-30%§!\n—岩石人口增长速度：§G+10%§!\n—生物人口增长速度：§R-10%§!\n—建筑和区划花费：§R+10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_energy$\n$t$—$pd_tooltip_minerals$\n$t$—£engineering£ $pd_researcher_ending$"
+ pc_pd_superhabitable_tooltip: "§Y超级类地星球§!是一类['concept_pd_uncommons']\n—星球规模介于§G31-35§!之间\n—会提供对应其他§Y超级类地星球§!的宜居性增益\n—只能§Y改造§!为其他类型的§Y超级类地星球§!\n—£district£ §Y$district_farming_plural$§!：§G+4§!\n—人口增长速度：§G+10%§!\n—建筑和区划花费：§R+25%§!\n—宜居性：§R-20%§!\n—$rare_building_warning$\n$t$—$pd_researcher_ending$（£society£）\n$t$—$pd_tooltip_food$\n$t$—$pd_tooltip_alloys$"
+ pc_pd_tidally_locked_tooltip: "§Y超级锁定星球§!是一类['concept_pd_uncommons']\n—会提供对应其他§Y潮汐锁定星球§!的宜居性增益\n—只能§Y改造§!为其他类型的§Y潮汐锁定星球§!\n—£district£ §Y$district_generator_plural$§!：§G+4§!\n—最大区划数：§R-30%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_energy$\n$t$—$pd_tooltip_food$\n$t$—$pd_researcher_ending$（£society£ £physics£）"
+ pc_pd_cave_tooltip: "§Y岩洞星球§!是一类['concept_pd_uncommons']\n—会提供对应其他§Y岩洞星球§!的宜居性增益\n—只能§Y改造§!为其他类型的§Y岩洞星球§!\n—£district£ §Y$district_mining_plural$§!：§G+4§!\n—轨道轰炸伤害：§G-30%§!\n—岩石人口增长速度：§G+10%§!\n—生物人口增长速度：§R-10%§!\n—建筑和区划花费：§R+10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_energy$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_researcher_ending$（£engineering£）"
  pc_nuked_relic: "遗落星球（死寂）"
  pc_nuked_relic_desc: "这个星球表面曾经被完全被单一城市所覆盖。如今这里只有废弃的古老遗迹，其原住民早已离去。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。地表和洞穴体系中辐射水平高。鲜有生命迹象表面。"
  pc_pd_dry_gaia: "盖亚星球（干燥）"
@@ -692,9 +686,15 @@
  mod_pc_pd_ironsand_habitability: "沙漠星球宜居性"
  trait_pc_pd_ironsand_preference: "沙漠星球偏好"
  trait_pc_pd_ironsand_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_cactus: "Cactus World"
- pc_pd_cactus_desc: "This desert planet is dominated by towering cacti, storing vast water reserves within their thick, spiny trunks."
- pc_pd_cactus_adj: "spikey"
- mod_pc_pd_cactus_habitability: "Desert Habitability"
- trait_pc_pd_cactus_preference: "Desert Preference"
+ pc_pd_cactus: "仙人掌星球"
+ pc_pd_cactus_desc: "这颗沙漠星球长满了高大的仙人掌，它们粗壮多刺的躯干内存储着大量水分。"
+ pc_pd_cactus_adj: "高大"
+ mod_pc_pd_cactus_habitability: "沙漠星球宜居性"
+ trait_pc_pd_cactus_preference: "沙漠星球偏好"
  trait_pc_pd_cactus_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_columnar: "石柱星球"
+ pc_pd_columnar_desc: "有氮氧大气，水体广袤的岩石星球。表面被海洋覆盖，分散的陆地由柱状玄武岩构成。这是亿万年的剧烈火山活动的结果。"
+ pc_pd_columnar_adj: "石柱"
+ mod_pc_pd_columnar_habitability: "海洋星球宜居性"
+ trait_pc_pd_columnar_preference: "海洋星球偏好"
+ trait_pc_pd_columnar_preference_desc: "$trait_pc_arctic_preference_desc$"
