--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
@@ -9,7 +9,7 @@
  pd_forest_desc: "地表森林稠密，形成蔓延整片大陆的无尽树海。"
  pd_tepid: "温煦星球"
  pd_tepid_desc: "这个星球基本不存在黄赤交角，理想的环境形成了多样化的光合作用过程，因而植物展现出生机盎然的色彩组合。"
- pd_mushroom: "蕈菌大陆星球"
+ pd_mushroom: "蕈菌星球（陆地）"
  pd_mushroom_desc: "真菌主宰着星球生态系统，广阔的蕈林和蕈原覆盖了大片区域。"
  pd_temperate: "温带星球"
  pd_temperate_desc: "这个星球气候温和，几乎每一块陆地都有丰富的生物多样性。"
@@ -23,7 +23,7 @@
  pd_ocean_desc: "海洋覆盖了§Y90%§!以上的表面，剩下的陆地均为岛屿。"
  pd_cascadian: "海洋雨林星球"
  pd_cascadian_desc: "这种环境由亚温带沿海森林和巍峨的山脉组成。在温和的冬季与短暂温暖的夏季之间，富有活力、常伴风暴的星球水体呈现出鲜明的反差。"
- pd_swamp: "湿地星球"
+ pd_swamp: "沼泽星球（树沼）"
  pd_swamp_desc: "星球上大部分地区都覆盖着林木茂盛的湿地。水圈强大而稳定，主要由浅海、湿地和沼泽构成，养育着丰富的动植物生命。"
  pd_crag: "峭壁星球"
  pd_crag_desc: "海洋和极地冰冠覆盖着大部分地表，其间点缀着繁多的岛屿，地势崎岖，常有地震。"
@@ -33,8 +33,6 @@
  pd_kelp_desc: "海洋覆盖了此星球的大部分地表，富饶的浅海孕育出广袤的巨藻林。这一水下生态系统生机勃勃，支撑着星球表面引人注目的丰富生命形态。"
  pd_algae: "粉藻华星球"
  pd_algae_desc: "该星球上众多浅海和湖泊供养着绚丽的粉色藻华，这番壮丽之景在太空中也能看得一清二楚。"
- pd_columnar: "$pc_pd_columnar$"
- pd_columnar_desc: "$pc_pd_columnar_desc$"
  pd_reef: "珊瑚礁星球"
  pd_reef_desc: "星球表面都是浅海，从轨道上可以看到水面下的巨大礁脉体系。礁脉高出水面形成了珊瑚岛链。"
  pd_archipelago: "火山列岛星球"
@@ -43,13 +41,13 @@
  pd_tropical_desc: "气候变化巨大，旱季和雨季交替明显。绝大部分大陆上都覆盖着茂盛的植被。"
  pd_atoll: "环礁星球"
  pd_atoll_desc: "丰富的浅潟湖、复杂的珊瑚礁、植被繁茂的热带群岛是此地的主要环境。宜人的温度孕育出繁盛的生物圈。"
- pd_tepui: "莽丛台地星球"
+ pd_tepui: "台地星球（热带）"
  pd_tepui_desc: "该星球拥有规模巨大的水圈，地表植物繁茂，高低海拔环境迥异。在峻峭的台地高原上，气温较为凉爽，降雨丰沛；地势较低的地方则更加温暖、潮湿，发育出繁茂的丛林。"
  pd_mangrove: "红树林星球"
  pd_mangrove_desc: "大部分区域被浅海覆盖，几乎没有高出海平面的陆地。从现有的少数岛屿的海岸地带开始，丛林可以向海洋绵延数百英里。"
  pd_cenote: "溶井星球"
  pd_cenote_desc: "稀疏的热带森林覆盖着地表，大部分水体都被滤进复杂的地下系统中，滋养着互相关联的生态系统和丰富多样的生物。"
- pd_fungal: "蕈菌丛林星球"
+ pd_fungal: "蕈菌星球（热带）"
  pd_fungal_desc: "蕈基植被构成了繁盛的生物圈的基础，从微小的刨子到参天巨菇，生命形态丰富多样。"
  pd_aerial: "浮荚星球"
  pd_aerial_desc: "独特的植物孕育出巨大的种荚，如云般飘荡在植被繁茂的陆地上空。"
@@ -68,8 +66,8 @@
  pd_outback: "荒原星球"
  pd_outback_desc: "干旱或半干旱的灌丛和荒漠覆盖了星球上地表，环水域地带植被较多。水体主要是一些内陆海和天然地下泉。"
  pd_coastal: "海岸漠境星球"
- pd_coastal_desc: "深洋使大气高度稳定，抑制陆地降水。普遍的雾霭维持各类多肉植物和灌木的生存。"
- pd_fungi: "蕈菌沙漠星球"
+ pd_coastal_desc: "深洋使大气高度稳定，抑制陆地降水。普遍的雾霭维系着各类多肉植物和灌木的生存。"
+ pd_fungi: "蕈菌星球（沙漠）"
  pd_fungi_desc: "此地气候干燥，地表覆盖着火山灰，生长着能够忍耐高温、干旱与养分匮乏的沙漠真菌。"
  pd_salt: "盐晶星球"
  pd_salt_desc: "尽管这里遍地都是丰饶的矿脉，高盐的地表环境却很不适宜动植物生存。"
@@ -77,7 +75,7 @@
  pd_aquifer_desc: "尽管沙子无法疏解酷热，不断移动的泄湖和地下水系，却承载着奇特的生态系统和丰富多样的生命形式。"
  pd_arid: "干旱星球"
  pd_arid_desc: "沙尘飞扬的星球表面多是峭壁和峡谷。植被稀少，但是极地地区森林繁茂。"
- pd_mesa: "干燥台地星球"
+ pd_mesa: "台地星球（干旱）"
  pd_mesa_desc: "赤道高原和极地森林是这里的主要环境。主要的水体是峭壁间的大河，河床上植物繁茂，景观各异。"
  pd_fog_desert: "雾漠星球"
  pd_fog_desert_desc: "海拔极高的山峰导致了大部分地区都存在的雨影现象，盐坪和干谷是高原地区的普遍地貌。水体主要是一些湖泊和山泉。"
@@ -124,7 +122,7 @@
  pd_antarctic: "冰原星球"
  pd_antarctic_desc: "冬季的风速可以达到25km/h以上，生命只能蜷缩在一些偏僻的地方，比如海冰下面，洞穴深处，或者能遮风挡雪的山谷里面。"
  pd_aeolian: "风蚀星球"
- pd_aeolian_desc: "通常风速可达3km/h以上。狂风塑造出空蚀的天坑，扁窄的峡谷，以及凹陷的洼地——这些地形让生命可以在其中蓬勃发育，而不会遭受恶劣气候的侵扰。"
+ pd_aeolian_desc: "该星球的风速一般可达到300km/h以上。狂风塑造出空蚀的天坑，扁窄的峡谷，以及凹陷的洼地——这些地形让生命可以在其中蓬勃发育，而不会遭受恶劣气候的侵扰。"
  pd_ice_spike: "冰刺星球"
  pd_ice_spike_desc: "地表下剧烈的板块运动冲击着冰层深处，所形成的高耸冰刺构成了此地的主要景观。"
  pd_crevasse: "冰裂星球"
@@ -155,9 +153,9 @@
  pd_lanthanide_desc: "稀土金属和地磁活动塑造出令人惊叹的环状山顶。此地几乎没有季节变化，水源勉强可以维持一些耐寒植被。"
  pd_tundra: "苔原星球"
  pd_tundra_desc: "此地拥有稳定的水体与平稳的低温。在险峻的山岭和冰川之间生长着大量地衣。"
- pd_bog: "沼泽星球"
+ pd_bog: "沼泽星球（酸沼）"
  pd_bog_desc: "此地的夏季湿润而短暂，冬季寒冷而漫长，全年的降水量相当可观。陆地上密集的沼泽构成了强健的水体。"
- pd_mycelium: "蕈菌冻原星球"
+ pd_mycelium: "蕈菌星球（苔原）"
  pd_mycelium_desc: "除了凉爽而短暂的夏季之外，一年中的其他时候都处于又干又冷的冬季。在中纬度地区，随处可见高大的蕈菌形成广袤的丛林，还有蔓延各地的，庞大又密集的地下菌丝网。"
  pd_mud: "泥浆星球"
  pd_mud_desc: "此地的季节差异不太明显，拥有丰富的降水。地表的低强度地热活动在冻原上塑成无数泥湖和泥火山。"
@@ -205,7 +203,7 @@
  pd_arcology_cave_desc: "这颗岩洞星球整体都被都市与工业集群覆盖。尽管地下建设成本相当高昂，这里确为殖民地提供了精良的防御。 "
  pd_nuked_cave: "岩洞星球（死寂）"
  pd_nuked_cave_desc: "一颗大气中充斥着氮氧元素的岩洞星球。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。表面辐射水平高。鲜有生命迹象。"
- pd_gaia_world: "盖亚星球（湿润）"
+ pd_gaia_world: "盖亚星球"
  pd_gaia_world_desc: "这类星球是环境理想的人造星球，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对高等生命都是极佳的生活空间。"
  pd_dry_gaia_world: "盖亚星球（干燥）"
  pd_dry_gaia_world_desc: "这类星球是环境理想的人造星球，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对所有既存高等生命都是极佳的生活空间。"
@@ -268,3 +266,5 @@
  pd_ironsand_desc: "$pc_pd_ironsand_desc$"
  pd_cactus: "$pc_pd_cactus$"
  pd_cactus_desc: "$pc_pd_cactus_desc$"
+ pd_columnar: "$pc_pd_columnar$"
+ pd_columnar_desc: "$pc_pd_columnar_desc$"
