--- a/planetary_diversity/localisation/german/planetarydiversity_planet_classes_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_planet_classes_l_german.yml
@@ -695,7 +695,7 @@
  #Tidally Locked
  pc_pd_tidally_locked_tooltip: "§YRotationsgebundene Welten§! sind ['concept_pd_uncommons']\n- Bewohnbarkeitsboni auf anderen §YTidally Locked Worlds§!\n- Können nur zwischen anderen §YTerraformed§! werden §YTidally Locked Worlds§!\n- £district£ §Y$district_generator_plural$§!: §G+4§!\n- Max. Bezirke: §R-30%§!\n- $rare_building_warning$\n$t$- $pd_tooltip_energy$\n$t$- $pd_tooltip_food$\n$t$- £physics£ £society£ $pd_researcher_ending$"
  #Cave
- pc_pd_cave_tooltip: "§YHöhlen Welten§! sind ['concept_pd_uncommons']\n- Bewohnbarkeitsboni auf anderen §YCave Worlds§!\n- Können nur zwischen anderen §YTerraformed§! werden §YCave Worlds§!\n- £district£ §Y$district_mining_plural$§!: §G+4§!\n- Orbitalbombardement-Schaden: §G-30%§!\n- Lithoid-Populationswachstumsgeschwindigkeit: §G+10%§!\n- Biologische Populationswachstumsgeschwindigkeit: §R-10%§!\n- Gebäude- und Distriktkosten: §R10%§!\n- $rare_building_warning$\n$t$- $pd_tooltip_energy$\n$t$- $pd_tooltip_minerals$\n$t$- £engineering£ $pd_researcher_ending$"
+ pc_pd_cave_tooltip: "§YHöhlen Welten§! sind ['concept_pd_uncommons']\n- Bewohnbarkeitsboni auf anderen §YCave Worlds§!\n- Können nur zwischen anderen §YTerraformed§! werden §YCave Worlds§!\n- £district£ §Y$district_mining_plural$§!: §G+4§!\n- Orbitalbombardement-Schaden: §G-30%§!\n- Lithoid-Populationswachstumsgeschwindigkeit: §G+10%§!\n- Biologische Populationswachstumsgeschwindigkeit: §R-10%§!\n- Gebäude- und Distriktkosten: §R+10%§!\n- $rare_building_warning$\n$t$- $pd_tooltip_energy$\n$t$- $pd_tooltip_minerals$\n$t$- £engineering£ $pd_researcher_ending$"
 
 ### PD Relic Worlds
  pc_nuked_relic: "Tote Reliktwelt"
