--- a/planetary_diversity/localisation/korean/planetarydiversity_planet_classes_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_planet_classes_l_korean.yml
@@ -695,7 +695,7 @@
  #Tidally Locked
  pc_pd_tidally_locked_tooltip: "§Y조석 고정 행성§! 은 ['concept_pd_uncommons']\n- 다른 §Y조석 고정 행성§!에서 거주 적합도 보너스\n- 다른 §Y조석 고정 행성§!으로만 §Y테라포밍§!할 수 있음\n- £district£ §Y$district_generator_plural$§!: §G+4§!\n- 최대 지구: §R-30%§!\n- $rare_building_warning$\n$t$- $pd_tooltip_energy$\n$t$- $pd_tooltip_food$\n$t$- £physics£ £society£ $pd_researcher_ending$"
  #Cave
- pc_pd_cave_tooltip: "§Y동굴 행성§! 은 ['concept_pd_uncommons']\n- 다른 §Y동굴 행성§!에서 거주 적합도 보너스\n- 다른 §Y동굴 행성§!으로만 §Y테라포밍§!할 수 있음\n- £district£ §Y$district_mining_plural$§!: §G+4§!\n- 궤도 폭격 피해: §G-30%§!\n- 석질류 팝 성장 속도: §G+10%§!\n- 생물학적 팝 성장 속도: §R-10%§!\n- 건물과 지구 비용: §R10%§!\n- $rare_building_warning$\n$t$- $pd_tooltip_energy$\n$t$- $pd_tooltip_minerals$\n$t$- £engineering£ $pd_researcher_ending$"
+ pc_pd_cave_tooltip: "§Y동굴 행성§! 은 ['concept_pd_uncommons']\n- 다른 §Y동굴 행성§!에서 거주 적합도 보너스\n- 다른 §Y동굴 행성§!으로만 §Y테라포밍§!할 수 있음\n- £district£ §Y$district_mining_plural$§!: §G+4§!\n- 궤도 폭격 피해: §G-30%§!\n- 석질류 팝 성장 속도: §G+10%§!\n- 생물학적 팝 성장 속도: §R-10%§!\n- 건물과 지구 비용: §R+10%§!\n- $rare_building_warning$\n$t$- $pd_tooltip_energy$\n$t$- $pd_tooltip_minerals$\n$t$- £engineering£ $pd_researcher_ending$"
 
 ### PD Relic Worlds
  pc_nuked_relic: "무덤 유물 행성"
