--- a/planetary_diversity/localisation/french/planetarydiversity_planet_classes_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_planet_classes_l_french.yml
@@ -690,7 +690,7 @@ pc_dwarf_gas_giant_desc: "Planète gazeuse avec une atmosphère principalement c
  #Tidally Locked
  pc_pd_tidally_locked_tooltip: "§YTidally Locked Worlds§! are ['concept_pd_uncommons']\n- Habitability bonuses on other §YTidally Locked Worlds§!\n- Can only be §YTerraformed§! between other §YTidally Locked Worlds§!\n- £district£ §Y$district_generator_plural$§!: §G+4§!\n- Max Districts: §R-30%§!\n- $rare_building_warning$\n$t$- $pd_tooltip_energy$\n$t$- $pd_tooltip_food$\n$t$- £physics£ £society£ $pd_researcher_ending$"
  #Cave
- pc_pd_cave_tooltip: "§YCave Worlds§! are ['concept_pd_uncommons']\n- Habitability bonuses on other §YCave Worlds§!\n- Can only be §YTerraformed§! between other §YCave Worlds§!\n- £district£ §Y$district_mining_plural$§!: §G+4§!\n- Orbital Bombardment Damage: §G-30%§!\n- Lithoid Pop Growth Speed: §G+10%§!\n- Biological Pop Growth Speed: §R-10%§!\n- Building and District Cost: §R10%§!\n- $rare_building_warning$\n$t$- $pd_tooltip_energy$\n$t$- $pd_tooltip_minerals$\n$t$- £engineering£ $pd_researcher_ending$"
+ pc_pd_cave_tooltip: "§YCave Worlds§! are ['concept_pd_uncommons']\n- Habitability bonuses on other §YCave Worlds§!\n- Can only be §YTerraformed§! between other §YCave Worlds§!\n- £district£ §Y$district_mining_plural$§!: §G+4§!\n- Orbital Bombardment Damage: §G-30%§!\n- Lithoid Pop Growth Speed: §G+10%§!\n- Biological Pop Growth Speed: §R-10%§!\n- Building and District Cost: §R+10%§!\n- $rare_building_warning$\n$t$- $pd_tooltip_energy$\n$t$- $pd_tooltip_minerals$\n$t$- £engineering£ $pd_researcher_ending$"
 
 ### PD Relic Worlds
 pc_nuked_relic: "Monde des Reliques Funéraires"
