Dec Update - Start of Biosynth Work and some bugs

--- a/planetary_diversity_uniques/localisation/english/pd_uniques_l_english.yml
+++ b/planetary_diversity_uniques/localisation/english/pd_uniques_l_english.yml
@@ -189,27 +189,11 @@
  edict_acean_minerals: "Acean Mineral Growth"
  edict_acean_minerals_desc: "By using the Acean Crystal to encourage mineral growth, we can greatly improve mining output."
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- #Techno-Organic Origin #TODO_GATEMAN - Simply ported this over to test
- origin_techno_world:0 "The Children of Unit 04"
- origin_techno_world_desc:0 "origin_techno_world_desc - TODO_GATEMAN"
- origin_tooltip_techno_world_effects:0 "origin_tooltip_techno_world_effects - TODO_GATEMAN"
- START_SCREEN_TECHNO_ORIGIN:0 "START_SCREEN_TECHNO_ORIGIN - TODO_GATEMAN "
-
-###Bio-Synthetic World
- #Techno-Organic Traits
- trait_organic_fourschildren:0 "Bio-Synthetic"
- trait_organic_fourschildren_desc:0 "Created by the AI 'Unit 04' and blending both organic and artificial intelligence to create a truly bio-synthetic lifeform."
+###Biosynthetic World
+ pd_biosynth: "Biosynthetic World"
+ pd_biosynth_desc: "TODO"
+ pc_pd_biosynth: "$pd_biosynth$"
+ pc_pd_biosynth_desc: "$pd_biosynth_desc$"
+ pdbiosynth.100.name: "A Synthetic World"
+ pdbiosynth.100.desc: "Scans of §Y[From.GetName]§! indicate extensive orbital damage and a sophisticated canal system supporting select flora and synthetic fauna, but no cities, factories, or other signs of its creators. The origins and purpose of this infrastructure remain unknown.\n\nThis planet's advanced systems and unresolved mysteries present scientific and strategic opportunities. Colonization is recommended to secure and investigate further."
+ pdbiosynth.100.a: "How interesting."
