Dec Update - Taiga World

--- a/planetary_diversity/localisation/braz_por/planetarydiversity_planet_modifiers_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_planet_modifiers_l_braz_por.yml
@@ -174,6 +174,8 @@
  pd_fjord_desc: "Os extensos oceanos deste planeta escavam enseadas profundas, promovendo florestas tropicais subárticas ao longo da costa e pastagens alpinas em altitudes mais elevadas."
  pd_blossom: "Mundo florido"
  pd_blossom_desc: "As ricas pastagens deste planeta são adornadas com uma flora florida vibrante, apresentando um espetáculo visível da órbita."
+ pd_taiga: "$pc_pd_taiga$"
+ pd_taiga_desc: "$pc_pd_taiga_desc$"
  pd_glaciovolcanic: "Mundo Glaciovulcânico"
  pd_glaciovolcanic_desc: "Este planeta sofre intensa atividade vulcânica, resultando em numerosos lagos aquecidos geotérmicamente que trazem minerais raros e energia para uma paisagem que de outra forma seria congelada."
  pd_lanthanide: "Mundo Lantanídeo"
