--- a/planetary_diversity/localisation/english/planetarydiversity_planet_modifiers_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_planet_modifiers_l_english.yml
@@ -174,6 +174,8 @@
  pd_fjord_desc: "This planet's extensive oceans carve deep inlets, fostering subarctic rainforests along the coast and alpine grasslands at higher elevations."
  pd_blossom: "Blossom World"
  pd_blossom_desc: "This planet's rich grasslands are adorned with vibrant flowering flora, presenting a spectacle visible from orbit."
+ pd_taiga: "$pc_pd_taiga$"
+ pd_taiga_desc: "$pc_pd_taiga_desc$"
  pd_glaciovolcanic: "Glaciovolcanic World"
  pd_glaciovolcanic_desc: "This planet undergoes intense volcanic activity, resulting in numerous geothermal-warmed lakes that bring rare minerals and energy to an otherwise frozen landscape."
  pd_lanthanide: "Lanthanide World"
