--- a/planetary_diversity/localisation/french/planetarydiversity_planet_classes_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_planet_classes_l_french.yml
@@ -438,6 +438,12 @@ pc_pd_blossom_adj: "fleuri"
 mod_pc_pd_blossom_habitability: "Habitabilité Alpine"
 trait_pc_pd_blossom_preference: "Préférence Alpine"
 trait_pc_pd_blossom_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_taiga: "Taiga World"
+ pc_pd_taiga_desc: "With its nitrogen-oxygen atmosphere, this mountainous forest planet hosts an active yet frigid hydrosphere, experiencing long, cold winters and short, cool summers."
+ pc_pd_taiga_adj: "mountainous"
+ mod_pc_pd_taiga_habitability: "Alpine Habitability"
+ trait_pc_pd_taiga_preference: "Alpine Preference"
+ trait_pc_pd_taiga_preference_desc: "$trait_pc_arctic_preference_desc$"
 pc_pd_glaciovolcanic: "Monde Glaciovolcanique"
 pc_pd_glaciovolcanic_desc: "Monde montagneux et gelé avec une atmosphère azote-oxygène, cette planète connaît des niveaux élevés d'activité volcanique. Cela résulte en de grands lacs réchauffés géothermiquement qui recouvrent la surface, apportant des minéraux rares et de l'énergie à la surface sinon gelée."
 pc_pd_glaciovolcanic_adj: "volcanique"
