--- a/planetary_diversity/localisation/polish/planetarydiversity_planet_modifiers_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_planet_modifiers_l_polish.yml
@@ -175,6 +175,8 @@
  pd_blossom: "Świat kwiatowy"
  pd_blossom_desc: "Bogate łąki tej planety ozdobione są żywą, kwitnącą roślinnością, co stanowi spektakl widoczny z orbity."
  pd_glaciovolcanic: "Świat glaciowulkaniczny"
+ pd_taiga: "$pc_pd_taiga$"
+ pd_taiga_desc: "$pc_pd_taiga_desc$"
  pd_glaciovolcanic_desc: "Ta planeta podlega intensywnej aktywności wulkanicznej, w wyniku której powstają liczne jeziora ogrzewane geotermalnie, które dostarczają rzadkie minerały i energię do zamarzniętego krajobrazu."
  pd_lanthanide: "Świat lantanowcowy"
  pd_lanthanide_desc: "Metale ziem rzadkich i aktywność magnetyczna tej planety tworzą wspaniałe szczyty gór w kształcie pierścieni. Przy minimalnych wahaniach sezonowych hydrosfera może utrzymać jedynie płaty odpornej roślinności."
