--- a/planetary_diversity/localisation/russian/planetarydiversity_planet_modifiers_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_planet_modifiers_l_russian.yml
@@ -175,6 +175,8 @@
  pd_blossom: "Цветочный мир"
  pd_blossom_desc: "Богатые луга этой планеты полны яркой цветущей флорой, а вид с орбиты просто незабываем."
  pd_glaciovolcanic: "Ледниково-вулканический мир"
+ pd_taiga: "$pc_pd_taiga$"
+ pd_taiga_desc: "$pc_pd_taiga_desc$"
  pd_glaciovolcanic_desc: "Если бы не высокий уровень вулканической активности этой планеты, она была бы ледниковым миром, но вместо этого многочисленные вулканы создают горячие озера, в которых обитает выносливая жизнь."
  pd_lanthanide: "Лантанидный мир"
  pd_lanthanide_desc: "Снег покрывает возвышающиеся кольцеобразные вершины гор, созданные необычайно высоким содержанием редкоземельных металлов и магнитной активностью этой планеты. Хотя на планете наблюдаются минимальные сезонные колебания, жидкой воды все еще достаточно для поддержания жизнестойкой растительности."
