--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_engine_events_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_engine_events_l_simp_chinese.yml
@@ -75,6 +75,7 @@
  pdengine.21.dune_forest: "$pc_pd_dune_forest$"
  pdengine.21.fjord: "$pc_pd_fjord$"
  pdengine.21.blossom: "$pc_pd_blossom$"
+ pdengine.21.taiga: "$pc_pd_taiga$"
  pdengine.21.glaciovolcanic: "$pc_pd_glaciovolcanic$"
  pdengine.21.lanthanide: "$pc_pd_lanthanide$"
  pdengine.21.tundra: "$pc_tundra$"
