--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
@@ -147,6 +147,8 @@
  pd_fjord_desc: "巨大的海洋深深嵌入陆地之中，孕育出沿海的副极地玉林和高海拔地区的山地草原。"
  pd_blossom: "花簇星球"
  pd_blossom_desc: "丰沃的草原上点缀着怒放的花卉，这番壮丽之景在轨道上也能看得一清二楚。"
+ pd_taiga: "$pc_pd_taiga$"
+ pd_taiga_desc: "$pc_pd_taiga_desc$"
  pd_glaciovolcanic: "冰川火山星球"
  pd_glaciovolcanic_desc: "这里的火山活动非常活跃，因而形成了丰富的地热湖泊，将罕见的矿物和能源带到冰封的地表。"
  pd_lanthanide: "镧星"
