--- a/planetary_diversity/localisation/braz_por/planetarydiversity_planet_classes_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_planet_classes_l_braz_por.yml
@@ -429,6 +429,12 @@
  mod_pc_pd_blossom_habitability: "Habitabilidade Alpina"
  trait_pc_pd_blossom_preference: "Preferência Alpina"
  trait_pc_pd_blossom_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_taiga: "Taiga World"
+ pc_pd_taiga_desc: "With its nitrogen-oxygen atmosphere, this mountainous forest planet hosts an active yet frigid hydrosphere, experiencing long, cold winters and short, cool summers."
+ pc_pd_taiga_adj: "mountainous"
+ mod_pc_pd_taiga_habitability: "Alpine Habitability"
+ trait_pc_pd_taiga_preference: "Alpine Preference"
+ trait_pc_pd_taiga_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_glaciovolcanic: "Mundo Glaciovulcânico"
  pc_pd_glaciovolcanic_desc: "Mundo montanhoso e congelado com uma atmosfera de nitrogênio-oxigênio, este planeta tem altos níveis de atividade vulcânica. Isto resulta em grandes lagos aquecidos geotérmicos que cobrem a superfície, o que traz minerais raros e energia para a superfície congelada."
  pc_pd_glaciovolcanic_adj: "vulcânico"
