--- a/planetary_diversity/localisation/german/planetarydiversity_planet_classes_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_planet_classes_l_german.yml
@@ -441,6 +441,12 @@
  mod_pc_pd_blossom_habitability: "Bewohnbarkeit (Alpin)"
  trait_pc_pd_blossom_preference: "Anpassung (Alpin)"
  trait_pc_pd_blossom_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_taiga: "Taiga World"
+ pc_pd_taiga_desc: "With its nitrogen-oxygen atmosphere, this mountainous forest planet hosts an active yet frigid hydrosphere, experiencing long, cold winters and short, cool summers."
+ pc_pd_taiga_adj: "mountainous"
+ mod_pc_pd_taiga_habitability: "Alpine Habitability"
+ trait_pc_pd_taiga_preference: "Alpine Preference"
+ trait_pc_pd_taiga_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_glaciovolcanic: "Gletschervulkanische Welt"
  pc_pd_glaciovolcanic_desc: "Gebirgige, gefrorene Welt mit einer Stickstoff-Sauerstoff-Atmosphäre. Dieser Planet weist eine hohe vulkanische Aktivität auf. Dies führt zu großen geothermisch erwärmten Seen, die die Oberfläche bedecken und seltene Mineralien und Energie an die sonst gefrorene Oberfläche bringen."
  pc_pd_glaciovolcanic_adj: "vulkanisch"
