--- a/planetary_diversity/localisation/german/planetarydiversity_planet_modifiers_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_planet_modifiers_l_german.yml
@@ -174,6 +174,8 @@
  pd_fjord_desc: "Die ausgedehnten Ozeane dieses Planeten schneiden tiefe Einbuchtungen und beherbergen subarktische Regenwälder entlang der Küste und alpine Graslandschaften in höheren Lagen."
  pd_blossom: "Blütenwelt"
  pd_blossom_desc: "Die üppigen Graslandschaften dieses Planeten sind mit leuchtend blühender Flora geschmückt und bieten ein aus der Umlaufbahn sichtbares Schauspiel."
+ pd_taiga: "$pc_pd_taiga$"
+ pd_taiga_desc: "$pc_pd_taiga_desc$"
  pd_glaciovolcanic: "Gletschervulkanische Welt"
  pd_glaciovolcanic_desc: "Auf diesem Planeten herrscht intensive vulkanische Aktivität, was zu zahlreichen geothermisch erwärmten Seen führt, die einer sonst gefrorenen Landschaft seltene Mineralien und Energie bringen."
  pd_lanthanide: "Lanthanidenwelt"
