--- a/planetary_diversity/localisation/korean/planetarydiversity_planet_classes_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_planet_classes_l_korean.yml
@@ -441,6 +441,12 @@
  mod_pc_pd_blossom_habitability: "고산 행성 거주 적합도"
  trait_pc_pd_blossom_preference: "고산 행성 선호"
  trait_pc_pd_blossom_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_taiga: "Taiga World"
+ pc_pd_taiga_desc: "With its nitrogen-oxygen atmosphere, this mountainous forest planet hosts an active yet frigid hydrosphere, experiencing long, cold winters and short, cool summers."
+ pc_pd_taiga_adj: "mountainous"
+ mod_pc_pd_taiga_habitability: "Alpine Habitability"
+ trait_pc_pd_taiga_preference: "Alpine Preference"
+ trait_pc_pd_taiga_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_glaciovolcanic: "화산성 빙하 행성"
  pc_pd_glaciovolcanic_desc: "대기가 질소와 산소로 조성된 산이 많은 얼어붙은 행성입니다. 이 행성은 화산 활동이 활발합니다.  이로 인해 지표면을 덮고 있는 지열로 따뜻해진 거대한 호수가 생겨서 얼어붙은 지표면에 희귀한 광물과 에너지를 공급합니다."
  pc_pd_glaciovolcanic_adj: "화산성"
