--- a/planetary_diversity/localisation/korean/planetarydiversity_planet_modifiers_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_planet_modifiers_l_korean.yml
@@ -174,6 +174,8 @@
  pd_fjord_desc: "이 행성의 광활한 바다는 깊은 입구를 형성하여 해안을 따라 아북극 열대우림과 고지대의 고산 초원을 키우고 있습니다."
  pd_blossom: "꽃 행성"
  pd_blossom_desc: "이 행성의 풍요로운 초원은 활기찬 꽃들로 장식되어 궤도에서 볼 수 있는 장관을 선사합니다."
+ pd_taiga: "$pc_pd_taiga$"
+ pd_taiga_desc: "$pc_pd_taiga_desc$"
  pd_glaciovolcanic: "화산성 빙하 행성"
  pd_glaciovolcanic_desc: "이 행성은 화산 활동이 활발하여 지열로 데워진 수많은 호수가 생겨나며, 얼어붙은 풍경에 희귀한 광물과 에너지를 선사합니다."
  pd_lanthanide: "란타넘 행성"
