--- a/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
@@ -441,6 +441,12 @@
  mod_pc_pd_blossom_habitability: "Możliwość zamieszkania świata górskiego"
  trait_pc_pd_blossom_preference: "Preferowany teren: górski"
  trait_pc_pd_blossom_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_taiga: "Taiga World"
+ pc_pd_taiga_desc: "With its nitrogen-oxygen atmosphere, this mountainous forest planet hosts an active yet frigid hydrosphere, experiencing long, cold winters and short, cool summers."
+ pc_pd_taiga_adj: "mountainous"
+ mod_pc_pd_taiga_habitability: "Alpine Habitability"
+ trait_pc_pd_taiga_preference: "Alpine Preference"
+ trait_pc_pd_taiga_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_glaciovolcanic: "Świat glaciowulkaniczny"
  pc_pd_glaciovolcanic_desc: "Górzysty, zamarznięty świat z atmosferą azotowo-tlenową, planeta ta charakteryzuje się wysokim poziomem aktywności wulkanicznej. W rezultacie na powierzchni powstają duże, ogrzewane geotermalnie jeziora, które dostarczają rzadkie minerały i energię na zamarzniętą powierzchnię."
  pc_pd_glaciovolcanic_adj: "wulkaniczny"
