--- a/planetary_diversity/localisation/russian/planetarydiversity_planet_classes_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_planet_classes_l_russian.yml
@@ -441,6 +441,12 @@
  mod_pc_pd_blossom_habitability: "Приспособленность к высокогорным мирам"
  trait_pc_pd_blossom_preference: "Предпочтение высокогорных миров"
  trait_pc_pd_blossom_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_taiga: "Taiga World"
+ pc_pd_taiga_desc: "With its nitrogen-oxygen atmosphere, this mountainous forest planet hosts an active yet frigid hydrosphere, experiencing long, cold winters and short, cool summers."
+ pc_pd_taiga_adj: "mountainous"
+ mod_pc_pd_taiga_habitability: "Alpine Habitability"
+ trait_pc_pd_taiga_preference: "Alpine Preference"
+ trait_pc_pd_taiga_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_glaciovolcanic: "Ледниково-вулканический мир"
  pc_pd_glaciovolcanic_desc: "Гористый, замерзший мир с азотно-кислородной атмосферой. Если бы не высокий уровень вулканической активности этой планеты, она была бы ледниковым миром, но вместо этого многочисленные вулканы создают горячие озера, в которых обитает выносливая жизнь."
  pc_pd_glaciovolcanic_adj: "ледо-вулканическая"
