--- a/planetary_diversity/localisation/spanish/planetarydiversity_planet_classes_l_spanish.yml
+++ b/planetary_diversity/localisation/spanish/planetarydiversity_planet_classes_l_spanish.yml
@@ -441,6 +441,12 @@
  mod_pc_pd_blossom_habitability: "Alpine Habitability"
  trait_pc_pd_blossom_preference: "Alpine Preference"
  trait_pc_pd_blossom_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_taiga: "Taiga World"
+ pc_pd_taiga_desc: "With its nitrogen-oxygen atmosphere, this mountainous forest planet hosts an active yet frigid hydrosphere, experiencing long, cold winters and short, cool summers."
+ pc_pd_taiga_adj: "mountainous"
+ mod_pc_pd_taiga_habitability: "Alpine Habitability"
+ trait_pc_pd_taiga_preference: "Alpine Preference"
+ trait_pc_pd_taiga_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_glaciovolcanic: "Glaciovolcanic World"
  pc_pd_glaciovolcanic_desc: "Mountainous, frozen world with a nitrogen-oxygen atmosphere, this planet has high levels of volcanic activity.  This results in large geothermal warmed lakes that cover the surface, which bring rare minerals and energy to the otherwise frozen surface."
  pc_pd_glaciovolcanic_adj: "volcanic"
