--- a/planetary_diversity/localisation/korean/planetarydiversity_planet_modifiers_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_planet_modifiers_l_korean.yml
@@ -196,6 +196,8 @@
  pd_tuya_desc: "계절이 한정되어 있고 겨울이 혹독한 이 행성의 안정적인 생물권은 화산 토양 영양분으로 번성하며 빙하 아래 화산이 지상에 산재해 있습니다."
  pd_cryovolcano: "Cryovolcano World"
  pd_cryovolcano_desc: "Life persists on this world thanks to nutrients released by cryovolcanoes, which eject water, ammonia, and methane from beneath the frozen surface."
+ pd_treeline: "$pc_pd_treeline$"
+ pd_treeline_desc: "$pc_pd_treeline_desc$"
  pd_cryoflora: "얼음꽃 행성"
  pd_cryoflora_desc: "행성의 수권은 대부분 얼어붙어 있으며 기온이 영하로 올라가는 일이 거의 없습니다. 그럼에도 불구하고 동식물은 부동액 단백질로 적응하여 아름답게 빛나는 생태계를 만들어 냈습니다."
  pd_lichen: "이끼 행성"
