--- a/planetary_diversity/localisation/polish/planetarydiversity_planet_modifiers_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_planet_modifiers_l_polish.yml
@@ -196,6 +196,8 @@
  pd_tuya_desc: "Dzięki ograniczonym porom roku i surowym zimom stabilna biosfera tego świata żyje na składnikach odżywczych z gleby wulkanicznej, a na powierzchni znajdują się subglacjalne wulkany."
  pd_cryovolcano: "Cryovolcano World"
  pd_cryovolcano_desc: "Life persists on this world thanks to nutrients released by cryovolcanoes, which eject water, ammonia, and methane from beneath the frozen surface."
+ pd_treeline: "$pc_pd_treeline$"
+ pd_treeline_desc: "$pc_pd_treeline_desc$"
  pd_cryoflora: "Świat kryształowy"
  pd_cryoflora_desc: "Hydrosfera planety jest w większości zamarznięta, a temperatury rzadko przekraczają granicę zera. Niemniej jednak flora i fauna przystosowały się do białek zapobiegających zamarzaniu, tworząc piękny, świecący ekosystem."
  pd_lichen: "Świat porostowy"
