--- a/planetary_diversity/localisation/braz_por/planetarydiversity_planet_classes_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_planet_classes_l_braz_por.yml
@@ -485,6 +485,12 @@
  mod_pc_pd_cryovolcano_habitability: "Tundra Habitability"
  trait_pc_pd_cryovolcano_preference: "Tundra Preference"
  trait_pc_pd_cryovolcano_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_treeline: "Treeline World"
+ pc_pd_treeline_desc: "A frigid, rocky planet with a nitrogen-oxygen atmosphere, where icy wastelands dominate most of the surface, except for a lush forest ecosystem flourishing along the equatorial band."
+ pc_pd_treeline_adj: "frigid"
+ mod_pc_pd_treeline_habitability: "Tundra Habitability"
+ trait_pc_pd_treeline_preference: "Tundra Preference"
+ trait_pc_pd_treeline_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_cryoflora: "Mundo Crioflora"
  pc_pd_cryoflora_desc: "Mundo frio e rochoso com atmosfera de nitrogênio-oxigênio. Embora as temperaturas estejam frequentemente abaixo de zero, a maior parte da hidrosfera está presa em neve e gelo. Apesar disso, a flora e a fauna deste planeta adaptaram-se através de proteínas anticongelantes para criar um ecossistema exuberante e vibrante."
  pc_pd_cryoflora_adj: "brilhante"
