--- a/planetary_diversity/localisation/braz_por/planetarydiversity_planet_modifiers_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_planet_modifiers_l_braz_por.yml
@@ -196,6 +196,8 @@
  pd_tuya_desc: "Com estações limitadas e invernos rigorosos, a biosfera estável deste mundo prospera com os nutrientes do solo vulcânico, e vulcões subglaciais pontilham a superfície."
  pd_cryovolcano: "Cryovolcano World"
  pd_cryovolcano_desc: "Life persists on this world thanks to nutrients released by cryovolcanoes, which eject water, ammonia, and methane from beneath the frozen surface."
+ pd_treeline: "$pc_pd_treeline$"
+ pd_treeline_desc: "$pc_pd_treeline_desc$"
  pd_cryoflora: "Mundo Crioflora"
  pd_cryoflora_desc: "A hidrosfera do planeta está quase toda congelada, com as temperaturas raramente subindo acima de zero. No entanto, a flora e a fauna adaptaram-se às proteínas anticongelantes, criando um belo ecossistema brilhante."
  pd_lichen: "Mundo Líquen"
