--- a/planetary_diversity/localisation/english/planetarydiversity_engine_events_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_engine_events_l_english.yml
@@ -92,6 +92,7 @@
  pdengine.21.basalt: "$pc_pd_basalt$"
  pdengine.21.tuya: "$pc_pd_tuya$"
  pdengine.21.cryovolcano: "$pc_pd_cryovolcano$"
+ pdengine.21.treeline: "$pc_pd_treeline$"
  pdengine.21.cryoflora: "$pc_pd_cryoflora$"
  pdengine.21.lichen: "$pc_pd_lichen$"
 
