--- a/planetary_diversity/localisation/english/planetarydiversity_planet_classes_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_planet_classes_l_english.yml
@@ -497,6 +497,12 @@
  mod_pc_pd_cryovolcano_habitability: "Tundra Habitability"
  trait_pc_pd_cryovolcano_preference: "Tundra Preference"
  trait_pc_pd_cryovolcano_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_treeline: "Treeline World"
+ pc_pd_treeline_desc: "A frigid, rocky planet with a nitrogen-oxygen atmosphere, where icy wastelands dominate most of the surface, except for a lush forest ecosystem flourishing along the equatorial band."
+ pc_pd_treeline_adj: "frigid"
+ mod_pc_pd_treeline_habitability: "Tundra Habitability"
+ trait_pc_pd_treeline_preference: "Tundra Preference"
+ trait_pc_pd_treeline_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_cryoflora: "Cryflora World"
  pc_pd_cryoflora_desc: "Cold and rocky world with a nitrogen-oxygen atmosphere. While temperatures are often below freezing, most of the hydrosphere is locked in snow and ice. Despite this, the flora and fauna of this planet have adapted via antifreeze proteins to create a lush, vibrant ecosystem."
  pc_pd_cryoflora_adj: "glowing"
