--- a/planetary_diversity/localisation/french/planetarydiversity_planet_classes_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_planet_classes_l_french.yml
@@ -494,6 +494,12 @@ trait_pc_pd_tuya_preference_desc: "$trait_pc_arctic_preference_desc$"
  mod_pc_pd_cryovolcano_habitability: "Tundra Habitability"
  trait_pc_pd_cryovolcano_preference: "Tundra Preference"
  trait_pc_pd_cryovolcano_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_treeline: "Treeline World"
+ pc_pd_treeline_desc: "A frigid, rocky planet with a nitrogen-oxygen atmosphere, where icy wastelands dominate most of the surface, except for a lush forest ecosystem flourishing along the equatorial band."
+ pc_pd_treeline_adj: "frigid"
+ mod_pc_pd_treeline_habitability: "Tundra Habitability"
+ trait_pc_pd_treeline_preference: "Tundra Preference"
+ trait_pc_pd_treeline_preference_desc: "$trait_pc_arctic_preference_desc$"
 pc_pd_cryoflora: "Monde de Cryoflore"
 pc_pd_cryoflora_desc: "Monde froid et rocheux avec une atmosphère azote-oxygène. Bien que les températures soient souvent en dessous de zéro, la majeure partie de l'hydrosphère est verrouillée dans la neige et la glace. Malgré cela, la flore et la faune de cette planète se sont adaptées grâce à des protéines antigel pour créer un écosystème luxuriant et vibrant."
 pc_pd_cryoflora_adj: "lumineux"
