--- a/planetary_diversity/localisation/german/planetarydiversity_planet_classes_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_planet_classes_l_german.yml
@@ -497,6 +497,12 @@
  mod_pc_pd_cryovolcano_habitability: "Tundra Habitability"
  trait_pc_pd_cryovolcano_preference: "Tundra Preference"
  trait_pc_pd_cryovolcano_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_treeline: "Treeline World"
+ pc_pd_treeline_desc: "A frigid, rocky planet with a nitrogen-oxygen atmosphere, where icy wastelands dominate most of the surface, except for a lush forest ecosystem flourishing along the equatorial band."
+ pc_pd_treeline_adj: "frigid"
+ mod_pc_pd_treeline_habitability: "Tundra Habitability"
+ trait_pc_pd_treeline_preference: "Tundra Preference"
+ trait_pc_pd_treeline_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_cryoflora: "Kryflora Welt"
  pc_pd_cryoflora_desc: "Kalte und felsige Welt mit einer Stickstoff-Sauerstoff-Atmosphäre. Während die Temperaturen oft unter dem Gefrierpunkt liegen, ist der Großteil der Hydrosphäre von Schnee und Eis umgeben. Trotzdem haben sich die Flora und Fauna dieses Planeten mithilfe von Frostschutzproteinen angepasst und ein üppiges, lebendiges Ökosystem geschaffen."
  pc_pd_cryoflora_adj: "leuchtend"
