--- a/planetary_diversity/localisation/german/planetarydiversity_planet_modifiers_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_planet_modifiers_l_german.yml
@@ -196,6 +196,8 @@
  pd_tuya_desc: "Da es nur wenige Jahreszeiten und strenge Winter gibt, lebt die stabile Biosphäre dieser Welt von Nährstoffen aus vulkanischen Böden. Die Oberfläche ist übersät mit subglazialen Vulkanen."
  pd_cryovolcano: "Cryovolcano World"
  pd_cryovolcano_desc: "Life persists on this world thanks to nutrients released by cryovolcanoes, which eject water, ammonia, and methane from beneath the frozen surface."
+ pd_treeline: "$pc_pd_treeline$"
+ pd_treeline_desc: "$pc_pd_treeline_desc$"
  pd_cryoflora: "Kryflora Welt"
  pd_cryoflora_desc: "Die Hydrosphäre des Planeten ist größtenteils gefroren und die Temperaturen steigen selten über den Gefrierpunkt. Dennoch haben sich Flora und Fauna mit Frostschutzproteinen angepasst und so ein wunderschönes leuchtendes Ökosystem geschaffen."
  pd_lichen: "Flechtenwelt"
