--- a/planetary_diversity/localisation/japanese/planetarydiversity_planet_modifiers_l_japanese.yml
+++ b/planetary_diversity/localisation/japanese/planetarydiversity_planet_modifiers_l_japanese.yml
@@ -196,6 +196,8 @@
  pd_tuya_desc: "With limited seasons and harsh winters, this world's stable biosphere thrives on volcanic soil nutrients, and subglacial volcanoes dot the surface."
  pd_cryovolcano: "Cryovolcano World"
  pd_cryovolcano_desc: "Life persists on this world thanks to nutrients released by cryovolcanoes, which eject water, ammonia, and methane from beneath the frozen surface."
+ pd_treeline: "$pc_pd_treeline$"
+ pd_treeline_desc: "$pc_pd_treeline_desc$"
  pd_cryoflora: "Cryflora World"
  pd_cryoflora_desc: "The planet's hydrosphere is mostly frozen, with temperatures rarely rising above freezing. Nevertheless, the flora and fauna have adapted with antifreeze proteins, creating a beautiful glowing ecosystem."
  pd_lichen: "Lichen World"
