--- a/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
@@ -497,6 +497,12 @@
  mod_pc_pd_cryovolcano_habitability: "Tundra Habitability"
  trait_pc_pd_cryovolcano_preference: "Tundra Preference"
  trait_pc_pd_cryovolcano_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_treeline: "Treeline World"
+ pc_pd_treeline_desc: "A frigid, rocky planet with a nitrogen-oxygen atmosphere, where icy wastelands dominate most of the surface, except for a lush forest ecosystem flourishing along the equatorial band."
+ pc_pd_treeline_adj: "frigid"
+ mod_pc_pd_treeline_habitability: "Tundra Habitability"
+ trait_pc_pd_treeline_preference: "Tundra Preference"
+ trait_pc_pd_treeline_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_cryoflora: "Świat kryształowy"
  pc_pd_cryoflora_desc: "Zimny ​​i skalisty świat z atmosferą azotowo-tlenową. Podczas gdy temperatury często spadają poniżej zera, większość hydrosfery jest zamknięta w śniegu i lodzie. Mimo to flora i fauna tej planety przystosowały się poprzez białka zapobiegające zamarzaniu, tworząc bujny, tętniący życiem ekosystem."
  pc_pd_cryoflora_adj: "glowing"
