--- a/planetary_diversity/localisation/russian/planetarydiversity_planet_classes_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_planet_classes_l_russian.yml
@@ -497,6 +497,12 @@
  mod_pc_pd_cryovolcano_habitability: "Tundra Habitability"
  trait_pc_pd_cryovolcano_preference: "Tundra Preference"
  trait_pc_pd_cryovolcano_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_treeline: "Treeline World"
+ pc_pd_treeline_desc: "A frigid, rocky planet with a nitrogen-oxygen atmosphere, where icy wastelands dominate most of the surface, except for a lush forest ecosystem flourishing along the equatorial band."
+ pc_pd_treeline_adj: "frigid"
+ mod_pc_pd_treeline_habitability: "Tundra Habitability"
+ trait_pc_pd_treeline_preference: "Tundra Preference"
+ trait_pc_pd_treeline_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_cryoflora: "Мир криофлоры"
  pc_pd_cryoflora_desc: "Холодный каменистый мир с азотно-кислородной атмосферой. Хоть температура ниже нуля, флора и фауна приспособились к ней с помощью белков-антифризов и образовали богатую, живую экосистему."
  pc_pd_cryoflora_adj: "криофлорная"
