--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
@@ -260,6 +260,8 @@
  pd_machine_tidally_locked_desc: "$pc_pd_machine_tidally_locked_desc$"
  pd_cryovolcano: "冰火山星球"
  pd_cryovolcano_desc: "冰层下的水、氨及甲烷会从冰火山中喷发，营养物质也会一并到达地表，生命因而得以在此繁衍。"
+ pd_treeline: "$pc_pd_treeline$"
+ pd_treeline_desc: "$pc_pd_treeline_desc$"
  pd_calcite: "$pc_pd_calcite$"
  pd_calcite_desc: "$pc_pd_calcite_desc$"
  pd_moss: "$pc_pd_moss$"
